--- a/public/post/object-types-func/pubdir/index.Rmd
+++ b/public/post/object-types-func/pubdir/index.Rmd
@@ -27,7 +27,9 @@ important object types that you will encounter in R.
 
 These data types are summarized in the following figure:
 
-![](vector-classification.png)<!-- -->
+```{r echo=FALSE}
+knitr::include_graphics("vector-classification.png", auto_pdf = TRUE)
+```
 
 This post will be about functions. Different types of vectors are covered in 
 the upcoming posts.
@@ -39,13 +41,8 @@ producing (almost always) an *output.*
 The function `log()`, for instance, takes as input a number and returns as output
 another number, namely the logarithm of the input:
 
-
-```r
+```{r}
 log(2)
-```
-
-```
-## [1] 0.6931472
 ```
 
 **Calling a function**
@@ -60,8 +57,7 @@ you separate by commas, then then you close the brackets.
 In the following example, the name of the function is `assign`, and its 
 arguments are `"test"` and `2`:
 
-
-```r
+```{r}
 assign("test", 2)
 ```
 
@@ -73,21 +69,11 @@ for mathematical operations, such as `+`, `-` or `/`.
 Strictly speaking, it is only a shortcut, since very function call using the 
 infix form can also be written as a function call in the prefix form:
 
-
-```r
+```{r}
 2 + 3
 ```
-
-```
-## [1] 5
-```
-
-```r
+```{r}
 `+`(2,3)
-```
-
-```
-## [1] 5
 ```
 
 Both function calls are, in the end, equivalent, but in this context the 
@@ -101,13 +87,8 @@ might also specify how the underlying routine should be executed exactly.
 The function `sum`, for instance, takes as arguments an arbitrary number of
 numbers (its 'input') and returns the sum of these numbers:
 
-
-```r
+```{r}
 sum(1,2,3,4)
-```
-
-```
-## [1] 10
 ```
 
 Moreover, `sum()` also acceps an *optional argument*, which is called
@@ -122,22 +103,12 @@ control the routine that the function applies. In the present case this means
 that if `na.rm` takes the value `TRUE`, all missing values in the input to 
 `sum()` will be ignored: 
 
-
-```r
+```{r}
 sum(1,2,3,4,NA) 
 ```
 
-```
-## [1] NA
-```
-
-
-```r
+```{r}
 sum(1,2,3,4,NA, na.rm = TRUE) 
-```
-
-```
-## [1] 10
 ```
 
 If you want to know what arguments you can give to a function, you should 
@@ -160,8 +131,7 @@ length of the two catheti or a right triangle, and calculate the length
 of the hypotenuse using
 the [Pythagorean theorem](https://en.wikipedia.org/wiki/Pythagorean_theorem).
 
-
-```r
+```{r}
 pythagoras <- function(cathetus_1, cathetus_2){
   hypo_squared <- cathetus_1**2 + cathetus_2**2
   hypotenuse <- sqrt(hypo_squared) # sqrt() takes square root
@@ -182,7 +152,7 @@ enclosed by curly brackets.
 In the example above we first compute the sum of the squares of the two 
 catheti, and save this intermediate result as `hypo_squared`.
 This is the part of the Pythagorean theorem that you might know as
-`\(c^2=a^2 + b^2\)`.
+$c^2=a^2 + b^2$.
 Since we are interested in the 'normal' length of the hypotenuse,
 we then use the function `sqrt()` to get the square root of `hypo_squared`.
 This is also the value that we wish our function would return to us. To make 
@@ -195,42 +165,22 @@ about whether you should use `return` or not can be found
 If we now call our function with the correct arguments, the routine above will
 be executed:
 
-
-```r
+```{r}
 pythagoras(2, 4)
-```
-
-```
-## [1] 4.472136
 ```
 
 > **Note**: we could also call the arguments of our new function explicitly, 
 which can be useful for transparency reasons when you call more complex functions:
 
-
-```r
+```{r}
 pythagoras(cathetus_1=2, cathetus_2=4) # Also works the other way around
-```
-
-```
-## [1] 4.472136
 ```
 
 > **Note**: you can see the source code of a function (mostly) by typing the 
 name of the function withough the brackets:
 
-
-```r
+```{r}
 pythagoras
-```
-
-```
-## function(cathetus_1, cathetus_2){
-##   hypo_squared <- cathetus_1**2 + cathetus_2**2
-##   hypotenuse <- sqrt(hypo_squared) # sqrt() takes square root
-##   return(hypotenuse)
-## }
-## <bytecode: 0x7f9045893678>
 ```
 
 Note that all object names used within the function body are lost after the 
@@ -240,8 +190,7 @@ Because of this behavior, R produces an error in the following example, in which
 `hypo_squared` exists *only* within the function body.
 
 
-
-```r
+```{r, error=TRUE}
 pythagoras <- function(cathetus_1, cathetus_2){
   hypo_squared <- cathetus_1**2 + cathetus_2**2
   hypotenuse <- sqrt(hypo_squared) # sqrt() takes square root
@@ -251,10 +200,6 @@ x <- pythagoras(2, 4)
 hypo_squared
 ```
 
-```
-## Error in eval(expr, envir, enclos): object 'hypo_squared' not found
-```
-
 Note that this behavior is intentional: otherwise, there would quickly be a lot
 of associations that are hard to keep track of. It is, however, of utmost 
 importance to always remember this behavior, otherwise, very confusing errors
@@ -262,15 +207,10 @@ might emerge, as in the following example in which you might have expected
 `hypo_squared` to take the value of the length of the hypothenuse squared 
 within your right triangle:
 
-
-```r
+```{r}
 hypo_squared <- 120
 x <- pythagoras(2, 4)
 hypo_squared
-```
-
-```
-## [1] 120
 ```
 
 It is always a good idea to **document** your own functions. This is not only
@@ -289,8 +229,7 @@ I strongly recommend to get used to follow
 right from the start. 
 Documenting our little function from above would look like this:
 
-
-```r
+```{r}
 #' Computes the length of the hypothenuse in a right triangle
 #' 
 #' This function takes the length of the two catheti of a right triangle as
