Specify pdf_document for posts

--- a/content/post/2022-03-24-first-steps/pubdir/index.Rmd
+++ b/content/post/2022-03-24-first-steps/pubdir/index.Rmd
@@ -12,6 +12,11 @@ output:
     toc: yes
     toc_depth: 2
     number_sections: yes
+  pdf_document:
+    highlight: tango
+    toc: true
+    toc_depth: 2
+    number_sections: true
 ---
 
 ```{r include=FALSE}
