--- a/content/post/2022-03-31-obj-types-i-functions/pubdir/index.Rmd
+++ b/content/post/2022-03-31-obj-types-i-functions/pubdir/index.Rmd
@@ -9,6 +9,11 @@ output:
     toc: true
     toc_depth: 2
     number_sections: true
+  pdf_document:
+    highlight: tango
+    toc: true
+    toc_depth: 2
+    number_sections: true
 ---
 
 # Overview
