--- a/content/post/2022-03-31-obj-types-iii-adv/pubdir/index.Rmd
+++ b/content/post/2022-03-31-obj-types-iii-adv/pubdir/index.Rmd
@@ -12,6 +12,11 @@ output:
     toc: true
     toc_depth: 2
     number_sections: true
+  pdf_document:
+    highlight: tango
+    toc: true
+    toc_depth: 2
+    number_sections: true
 ---
 
 * TOC
