--- a/content/post/installation/pubdir/index.Rmd
+++ b/content/post/installation/pubdir/index.Rmd
@@ -15,6 +15,11 @@ output:
     toc: true
     toc_depth: 2
     number_sections: true
+  pdf_document:
+    highlight: tango
+    toc: true
+    toc_depth: 2
+    number_sections: true
 ---
 
 # Introduction
