--- a/content/post/installing-packages/pubdir/index.Rmd
+++ b/content/post/installing-packages/pubdir/index.Rmd
@@ -14,6 +14,11 @@ output:
     toc: true
     toc_depth: 2
     number_sections: true
+  pdf_document:
+    highlight: tango
+    toc: true
+    toc_depth: 2
+    number_sections: true
 ---
 
 ```{r, echo=FALSE, message=FALSE}
