--- a/content/notes/T5-visualization-lecture-notes/pubdir/preamble.tex
+++ b/content/notes/T5-visualization-lecture-notes/pubdir/preamble.tex
@@ -42,7 +42,7 @@ urlcolor=euflightblue
 \pagestyle{scrheadings}
 \clearpairofpagestyles
 
-\ihead{Tutorial: Installing the relevant software}
+\ihead{Lecture notes: Visualization I}
 %\chead{Kopfzeile Mitte}
 \ohead{\pagemark} %
 %\ifoot{}
