--- a/content/post/2022-03-24-first-steps/pubdir/preamble.tex
+++ b/content/post/2022-03-24-first-steps/pubdir/preamble.tex
@@ -42,7 +42,7 @@ urlcolor=euflightblue
 \pagestyle{scrheadings}
 \clearpairofpagestyles
 
-\ihead{Tutorial: Installing the relevant software}
+\ihead{Tutorial: First steps in R}
 %\chead{Kopfzeile Mitte}
 \ohead{\pagemark} %
 %\ifoot{}
