--- a/content/post/2022-03-31-obj-types-i-functions/pubdir/preamble.tex
+++ b/content/post/2022-03-31-obj-types-i-functions/pubdir/preamble.tex
@@ -42,7 +42,7 @@ urlcolor=euflightblue
 \pagestyle{scrheadings}
 \clearpairofpagestyles
 
-\ihead{Tutorial: Installing the relevant software}
+\ihead{Tutorial: Object types I - Functions}
 %\chead{Kopfzeile Mitte}
 \ohead{\pagemark} %
 %\ifoot{}
