--- a/public/post/installing-packages/pubdir/preamble.tex
+++ b/public/post/installing-packages/pubdir/preamble.tex
@@ -42,7 +42,7 @@ urlcolor=euflightblue
 \pagestyle{scrheadings}
 \clearpairofpagestyles
 
-\ihead{Tutorial: Installing the relevant software}
+\ihead{Tutorial: Setting up R packages}
 %\chead{Kopfzeile Mitte}
 \ohead{\pagemark} %
 %\ifoot{}
