--- a/content/post/2022-03-31-obj-types-i-functions/pubdir/index.Rmd
+++ b/content/post/2022-03-31-obj-types-i-functions/pubdir/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Fundamental object types in R I: Functions"
 author: "Claudius Gräbner-Radkowitsch"
-date: "2/12/2022"
+date: "2022-09-06"
 documentclass: scrartcl
 output: 
   html_document:
